# cegs-portal

./: .dockerignore  .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  ACCESSION_IDS.md  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  README.rst  docker-compose.yml  local.yml  manage.py  package-lock.json  package.json  postcss.config.js  production.yml  pyproject.toml  pytest.ini  setup.cfg  tailwind.config.js
.envs/.local/: .postgres
cegs_portal/: conftest.py
cegs_portal/get_expr_data/: apps.py  conftest.py  models.py  tasks.py  tests.py  urls.py  view_models.py  views.py
cegs_portal/hide_admin/: README.md  apps.py
cegs_portal/igvf/: apps.py  models.py  urls.py  view_models.py  views.py
cegs_portal/search/: admin.py  apps.py  conftest.py  errors.py  tasks.py  urls.py  validators.py
cegs_portal/task_status/: apps.py  conftest.py  decorators.py  factories.py  models.py  tests.py  urls.py  view_models.py  views.py
cegs_portal/tasks/: admin.py  apps.py  conftest.py  decorators.py  factories.py  models.py  urls.py  view_models.py  views.py
cegs_portal/templates/: 400.html  403.html  404.html  500.html  base.html
cegs_portal/tools/: apps.py
cegs_portal/uploads/: apps.py  errors.py  urls.py  validators.py  view_models.py
cegs_portal/users/: admin.py  apps.py  conftest.py  forms.py  models.py  urls.py  views.py
cegs_portal/utils/: __init__.py  db_ids.py  decorators.py  http_exceptions.py  http_responses.py  pagination_types.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  qa.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
extensions/exp_viz/: Cargo.toml  README.md  pyproject.toml
extensions/exp_viz/src/: filter.rs  filter_data_structures.rs  intersect_data_structures.rs  intersects.rs  lib.rs  load.rs  merge.rs  set_ops.rs
requirements/: base.txt  local.txt  production.txt  qa.txt
scripts/: __init__.py  dev.js  gen_level1.py  gen_level1.sh  gen_level2.py  gen_level2.sh  gen_level3.py  gen_level3.sh  load_gencode_gff3_data.py  load_gencode_gff3_data.sh  load_klann_2021_scceres_data.py  load_klann_2021_scceres_data.sh  load_klann_2021_wgceres_data.py  load_klann_2021_wgceres_data.sh  load_screen_ccres.py  load_screen_ccres.sh  load_wgceres_data.py  load_wgceres_data.sh  refresh_static_files.sh
scripts/data_generation/: DCPE00000002_dhs_bed_klann_2021_scceres.sh  DCPE0002_dhs_bed_klann_2021_scceres.py  DCPE0002_dhs_bed_klann_2021_scceres.sh  DCPEXPR0000000002_dhs_bed_klann_2021_scceres.sh  DCPEXPR00000002_dhs_bed_klann_2021_scceres.sh  ccre_bed.py  ccre_overlaps.sh  gen_chromo_viz_level1.py  gen_chromo_viz_level1.sh  gen_chromo_viz_level2.py  gen_chromo_viz_level2.sh  gen_chromo_viz_level3.sh  gen_experiment_coverage_manifest.py  (+10 more)
utils/: __init__.py  ccres.py  db_ids.py  experiment.py  features.py  file.py  misc.py  timing.py
(+650 files in other folders)
